update localization for "Vận hành", "Thiết lập"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,11 +8,12 @@
   "activate_course": "Activate course",
   "activate_e_learning_courses_for_learners": "Activate E-learning courses for learners",
   "activated": "Activated",
+  "suspended": "Suspended",
   "activity": "Activity",
   "activity_history": "Activity history",
   "add": "Add",
   "add_content": "Add content",
-  "add_course": "Thêm khoá học",
+  "add_course": "Add course",
   "add_new": "Add new",
   "add_new_account": "Add new account",
   "add_new_check_in_lesson": "Add new check-in lesson",
@@ -92,6 +93,7 @@
   "cancel_learner_list_of_staff": "Cancel learner list of staff",
   "cancel_order": "Cancel order",
   "cannot_blank": "cannot be blank",
+  "cannot_lower_0": "cannot lower than or equal to 0",
   "cannot_remove_permission_group": "Cannot remove permission group",
   "caring": "Caring",
   "caring_by": "Caring by",
@@ -177,7 +179,7 @@
   "e_learning_category_management": "E-learning category management",
   "e_learning_course": "E-learning course",
   "e_learning_course_management": "E-learning course management",
-  "e_learning_domain": "E-leaning domaindomain_of_e_learning_website",
+  "e_learning_domain": "E-leaning website domain",
   "e_learning_subject_management": "E-learning subject management",
   "e_learning_video_management": "E-learning video management",
   "edit": "Edit",
@@ -245,6 +247,8 @@
   "forum_communities": "Forum communities",
   "forum_domain": "Forum domain",
   "forum_settings": "Forum settings",
+  "logo_link": "Logo link",
+  "banner_link": "Banner link",
   "frame": "Frame",
   "free_course_reports": "Free course reports",
   "free_courses": "Free courses",
@@ -297,9 +301,8 @@
   "learner_management": "Learner management",
   "learner_name": "Learner name",
   "learners": "Learners",
-  "learning": "Learning",
-  "learning_e_learners": "Learning e-learners",
-  "learning_learners": "Learning learners",
+  "studying_e_learners": "Studying e-learners",
+  "studying_learners": "Studying learners",
   "learning_ticket": "Learning ticket",
   "learning_ticket_list": "Learning tickets",
   "learning_ticket_management": "Learning ticket management",
@@ -344,7 +347,7 @@
   "monthly": "Monthly",
   "monthly_package": "Monthly package",
   "monthly_price": "Price per month",
-  "name": "Tên",
+  "name": "Name",
   "name_code_campaign": "Name/Code of campaign",
   "new_price": "New price",
   "news": "News",
@@ -418,6 +421,7 @@
   "pick": "Pick",
   "pick_a_class": "Pick a class",
   "pick_a_day_in_a_week": "Pick a day in a week",
+  "pick_a_day_in_a_month": "Pick a day in a month",
   "pick_a_form": "Pick a form",
   "pick_a_learning_ticket": "Pick a learning ticket",
   "pick_a_method": "Pick a method",
@@ -448,7 +452,7 @@
   "product_type": "Product type",
   "products": "Products",
   "program_rule": "Program rule",
-  "proof_of_payment_list": "Proofs of payment",
+  "proof_of_payment_verification_list": "Proofs of payment verification",
   "publication": "Publication",
   "publication_code": "Publication code",
   "publication_link": "Publication link",
@@ -646,7 +650,7 @@
   "view_landing_pages": "View landing pages",
   "view_learner_details": "View learner details",
   "view_learners": "View learners",
-  "view_learning_learners": "View learning learners",
+  "view_studying_learners": "View learning learners",
   "view_membership_details": "View membership details",
   "view_memberships": "View memberships",
   "view_order_details": "View order details",
@@ -701,5 +705,49 @@
   "zalo_messages_sent": "Sent messages on Zalo",
   "zoom_id": "ID of Zoom room",
   "zoom_link": "Zoom Link",
-  "zoom_password": "Password of Zoom room"
+  "zoom_password": "Password of Zoom room",
+   "forum_name": "Forum name",
+   "publish_posts": "Publish posts",
+   "stars_rating_course": "Stars rating course",
+   "reply_others": "Reply others",
+   "others_repliable": "Others repliable",
+   "comment_reaction": "Comment reaction",
+   "reacted_comment": "Reacted comment",
+   "referral_membership_tier": "Refferal membership tier",
+   "caring_staff": "Caring staff",
+   "refferal_account_number": "Refferal account number",
+   "agency_code": "Agency code",
+  "by_learners": "By learners",
+  "package_type": "Package type",
+  "orders": "Orders",
+  "cancel_agency_permission": "Cancel agency permission",
+  "receive_account_number": "Receive account number",
+  "refund_request_type": "Refund request type",
+  "refund_amount": "Refund amount",
+  "refund_request_image": "Refund proof",
+  "click_here_to_paste_image": "Click here to paste image",
+  "learner_id_image": "Learner ID",
+  "processed": "Processed",
+  "view_image": "View image",
+  "proof_of_payment_image": "Proof of payment image",
+  "kpi_commissions": "KPI & Commissions",
+  "add_level": "Add level",
+  "intro_video_settings": "Introduction video settings",
+  "order": "order",
+  "community_name": "Community name",
+  "pinned": "Pinned",
+  "featured": "Featured",
+  "avatar_link": "Avatar link",
+  "tutiton_refunded": "Tutition refunded",
+  "pick_a_tag": "Pick a tag",
+  "take_note_here": "Take note here",
+  "note": "Note",
+  "job_title": "Job title",
+  "running": "Running",
+  "stopped": "Stopped",
+  "pick_a_ticket": "Pick a ticket",
+  "sent": "Sent",
+  "unsend": "Unsend",
+  "resend": "Resend",
+  "view_email_content": "View email content"
 }
