--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -8,6 +8,7 @@
   "activate_course": "Kích hoạt khoá học",
   "activate_e_learning_courses_for_learners": "Kích hoạt khoá học Elearning cho học viên",
   "activated": "Kích hoạt",
+  "suspended": "Tạm dừng",
   "activity": "Hoạt động",
   "activity_history": "Xem quá trình hoạt động",
   "add": "Thêm",
@@ -92,6 +93,7 @@
   "cancel_learner_list_of_staff": "Huỷ danh sách học viên của nhân sự",
   "cancel_order": "Huỷ đơn hàng",
   "cannot_blank": "không được để trống",
+  "cannot_lower_0": "không thể nhỏ hơn hoặc bằng 0",
   "cannot_remove_permission_group": "Lỗi xoá nhóm quyền",
   "caring": "Đang chăm sóc",
   "caring_by": "Nhân viên chăm sóc",
@@ -231,6 +233,7 @@
   "event_name": "Tên sự kiện",
   "example": "Ví dụ",
   "excess_refunded": "Hoàn tiền thừa",
+  "tutiton_refunded": "Hoàn học phí",
   "executing_staff": "Nhân viên thực thi",
   "export_learners_data": "Xuất dữ liệu học viên",
   "export_to_excel": "Xuất excel",
@@ -241,6 +244,8 @@
   "footer_settings": "Cấu hình chân trang",
   "form_name": "Tên form",
   "forum": "Diễn đàn",
+  "logo_link": "Đường dẫn ảnh logo",
+  "banner_link": "Đường dẫn ảnh banner",
   "forum_categories": "Danh sách danh mục diễn đàn",
   "forum_communities": "Danh sách cộng đồng",
   "forum_domain": "Tên miền trang diễn đàn",
@@ -298,8 +303,8 @@
   "learner_name": "Tên học viên",
   "learners": "Học viên",
   "learning": "Đang học",
-  "learning_e_learners": "Danh sách học viên e-learning đang học",
-  "learning_learners": "Danh sách học viên đang học",
+  "studying_e_learners": "Danh sách học viên e-learning đang học",
+  "studying_learners": "Danh sách học viên đang học",
   "learning_ticket": "Vé khoá học",
   "learning_ticket_list": "Danh sách vé khóa học",
   "learning_ticket_management": "Quản lý vé",
@@ -349,7 +354,7 @@
   "new_price": "Giá mới",
   "news": "Tin tức",
   "no": "STT",
-  "no_account": "Chưa tài khoản",
+  "no_account": "Chưa có tài khoản",
   "no_demands": "Không có nhu cầu",
   "normal_page": "Trang bình thường",
   "note_content": "Nội dung ghi chú",
@@ -418,6 +423,7 @@
   "pick": "Chọn",
   "pick_a_class": "Chọn lớp để gắn",
   "pick_a_day_in_a_week": "Chọn thứ trong tuần",
+  "pick_a_day_in_a_month": "Chọn ngày trong tháng",
   "pick_a_form": "Chọn form để sử dụng cho landing page",
   "pick_a_learning_ticket": "Chọn vé để gắn",
   "pick_a_method": "Chọn phương thức",
@@ -448,7 +454,7 @@
   "product_type": "Loại sản phẩm",
   "products": "Sản phẩm",
   "program_rule": "Thể lệ chương trình",
-  "proof_of_payment_list": "Danh sách xác thực thanh toán",
+  "proof_of_payment_verification_list": "Danh sách xác thực thanh toán",
   "publication": "Ấn phẩm",
   "publication_code": "Mã ấn phẩm",
   "publication_link": "Link ấn phẩm",
@@ -474,7 +480,7 @@
   "refresh": "Làm mới",
   "refund_requests": "Yêu cầu hoàn tiền",
   "refunded": "Hoàn tiền",
-  "registered": "Đã có tài khoản",
+  "registered": "Đã đăng ký",
   "registered_e_learners": "Danh sách học viên e-learning đăng ký khoá học",
   "registered_tickets": "Số vé đăng ký",
   "registration_count": "Số lượt đăng ký",
@@ -646,7 +652,7 @@
   "view_landing_pages": "Xem danh sách landingpage",
   "view_learner_details": "Thông tin chi tiết học viên",
   "view_learners": "Xem danh sách học viên",
-  "view_learning_learners": "Xem danh sách học viên đang học",
+  "view_studying_learners": "Xem danh sách học viên đang học",
   "view_membership_details": "Chi tiết danh sách thành viên",
   "view_memberships": "Danh sách sách thành viên",
   "view_order_details": "Xem chi tiết đơn hàng",
@@ -701,5 +707,48 @@
   "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
   "zoom_id": "ID phòng Zoom",
   "zoom_link": "Link Zoom",
-  "zoom_password": "Mật khẩu phòng Zoom"
+  "zoom_password": "Mật khẩu phòng Zoom",
+  "forum_name": "Tên diễn đàn",
+  "publish_posts": "Đăng bài viết",
+  "stars_rating_course": "Đánh giá sao khoá học",
+  "reply_others": "Trả lời người khác",
+  "others_repliable": "Người khác trả lời",
+  "comment_reaction": "Thả tim bình luận",
+  "reacted_comment": "Bình luận được thả tim",
+  "referral_membership_tier": "Cấp bậc thành viên người giới thiệu",
+  "caring_staff": "Nhân viên đang chăm",
+  "refferal_account_number": "Số tài khoản người giới thiệu",
+  "agency_code": "Mã đại lý",
+  "by_learners": "Theo học viên",
+  "package_type": "Loại gói",
+  "orders": "Đơn hàng",
+  "cancel_agency_permission": "Hủy quyền đại lý",
+  "receive_account_number": "Tài khoản hoàn tiền",
+  "refund_request_type": "Loại yêu cầu hoàn tiền",
+  "refund_amount": "Số tiền hoàn",
+  "refund_request_image": "Ảnh yêu cầu hoàn tiền",
+  "click_here_to_paste_image": "CLick chuột vào đây để paste hình ảnh",
+  "learner_id_image": "Ảnh CCCD học viên",
+  "processed": "Đã xử lý",
+  "view_image": "Xem ảnh",
+  "proof_of_payment_image": "Ảnh uỷ nhiệm chi",
+  "kpi_commissions": "Mức doanh số và hoa hồng",
+  "add_level": "Thêm mức",
+  "intro_video_settings": "Cấu hình video giới thiệu",
+  "order": "Thứ tự",
+  "community_name": "Tên cộng đồng",
+  "pinned": "Ghim",
+  "featured": "Nổi bật",
+  "avatar_link": "Đường dẫn ảnh avatar",
+  "pick_a_tag": "Chọn thẻ tag",
+  "take_note_here": "Viết ghi chú ở đây",
+  "note": "Ghi chú",
+  "job_title": "Chức danh",
+  "running": "Đang hoạt động",
+  "stopped": "Không hoạt động",
+  "pick_a_ticket": "Chọn vé",
+  "sent": "Đã gửi",
+  "unsend": "Chưa gửi",
+  "resend": "Gửi lại",
+  "view_email_content": "Xem nội dung email"
 }
