sort keys for localization files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,12 +8,12 @@
   "activate_course": "Activate course",
   "activate_e_learning_courses_for_learners": "Activate E-learning courses for learners",
   "activated": "Activated",
-  "suspended": "Suspended",
   "activity": "Activity",
   "activity_history": "Activity history",
   "add": "Add",
   "add_content": "Add content",
   "add_course": "Add course",
+  "add_level": "Add level",
   "add_new": "Add new",
   "add_new_account": "Add new account",
   "add_new_check_in_lesson": "Add new check-in lesson",
@@ -54,6 +54,7 @@
   "advance_limit": "Advance limit",
   "advertisement_management": "Advertisement management",
   "agencies": "Agencies",
+  "agency_code": "Agency code",
   "agency_list": "Agencies",
   "agent": "Agent",
   "apply": "Apply",
@@ -71,6 +72,7 @@
   "attendance_time": "Attendance Time",
   "auto": "Auto",
   "avatar": "Avatar",
+  "avatar_link": "Avatar link",
   "back": "Back",
   "background": "Background",
   "badge": "Badge",
@@ -78,8 +80,10 @@
   "bank_transfer": "Bank transfer",
   "banking_online": "Banking online",
   "banner": "Banner",
+  "banner_link": "Banner link",
   "big_courses": "Big courses",
   "by_date": "By date",
+  "by_learners": "By learners",
   "by_month": "By month",
   "by_quarter": "By quarter",
   "by_referred_person": "By referred person",
@@ -90,6 +94,7 @@
   "bystanding_learners": "Bystanding learners",
   "call_blocked_by_customer": "Customer blocked calling",
   "cancel": "Cancel",
+  "cancel_agency_permission": "Cancel agency permission",
   "cancel_learner_list_of_staff": "Cancel learner list of staff",
   "cancel_order": "Cancel order",
   "cannot_blank": "cannot be blank",
@@ -99,6 +104,7 @@
   "caring_by": "Caring by",
   "caring_e_learners": "Caring e-learners",
   "caring_learners": "Caring learners",
+  "caring_staff": "Caring staff",
   "category": "Category",
   "category_icon": "Category icon",
   "category_name": "Category name",
@@ -116,14 +122,17 @@
   "class_management": "Class management",
   "class_name": "Class name",
   "classes": "Classes",
+  "click_here_to_paste_image": "Click here to paste image",
   "collected_information": "Collected information",
   "column_name": "Column name",
+  "comment_reaction": "Comment reaction",
   "commission": "Commission",
   "commission_method": "Commission method",
   "commission_policy": "Commission policy",
   "commission_rate": "Commission rate",
   "community_categories": "Community categories",
   "community_category": "Community category",
+  "community_name": "Community name",
   "complete": "Complete",
   "confirm": "Confirm",
   "contact_request_list": "Contact requests",
@@ -238,6 +247,7 @@
   "export_to_excel": "Export to Excel",
   "external": "External",
   "failed": "Failed",
+  "featured": "Featured",
   "features": "Features",
   "filter": "Filter",
   "footer_settings": "Footer settings",
@@ -246,9 +256,8 @@
   "forum_categories": "Forum categories",
   "forum_communities": "Forum communities",
   "forum_domain": "Forum domain",
+  "forum_name": "Forum name",
   "forum_settings": "Forum settings",
-  "logo_link": "Logo link",
-  "banner_link": "Banner link",
   "frame": "Frame",
   "free_course_reports": "Free course reports",
   "free_courses": "Free courses",
@@ -272,14 +281,17 @@
   "indirect_referral_commission": "Indirect referral commission",
   "indirect_referral_points": "Indirect referral points",
   "internal": "Internal",
+  "intro_video_settings": "Introduction video settings",
   "introduction_video": "Introduction video",
   "introduction_video_link": "Introduction video link",
   "introduction_videos": "Introduction videos",
   "invalid_format": "is invalid format",
   "is_popular": "Is popular",
+  "job_title": "Job title",
   "join_course": "Join course",
   "joined_course": "Joined course",
   "keywords": "Keywords",
+  "kpi_commissions": "KPI & Commissions",
   "landing_page": "Landing page",
   "landing_page_code": "Landing page code",
   "landing_page_content": "Landing page content",
@@ -298,11 +310,10 @@
   "learner_count_75": "75% learner count",
   "learner_count_90": "90% learner count",
   "learner_details": "Learner details",
+  "learner_id_image": "Learner ID",
   "learner_management": "Learner management",
   "learner_name": "Learner name",
   "learners": "Learners",
-  "studying_e_learners": "Studying e-learners",
-  "studying_learners": "Studying learners",
   "learning_ticket": "Learning ticket",
   "learning_ticket_list": "Learning tickets",
   "learning_ticket_management": "Learning ticket management",
@@ -318,6 +329,7 @@
   "link_on_menu": "Link on menu",
   "location": "Location",
   "log_out": "Log out",
+  "logo_link": "Logo link",
   "logout": "Logout",
   "make_a_call": "Make a call",
   "manual": "Manual",
@@ -355,6 +367,7 @@
   "no_account": "No account",
   "no_demands": "No demands",
   "normal_page": "Normal page",
+  "note": "Note",
   "note_content": "Note content",
   "notification_email": "Notification email",
   "notification_email_list": "Notification emails",
@@ -364,9 +377,11 @@
   "opening_class": "Opening class",
   "operation": "Operation",
   "optional_course_settings": "Optional course settings",
+  "order": "order",
   "order_code": "Order code",
   "order_count": "Order count",
   "order_status": "Order status",
+  "orders": "Orders",
   "organization": "Organization",
   "organization_email": "Organization email",
   "organization_list": "Organizations",
@@ -376,9 +391,11 @@
   "organization_representative": "Organization representative",
   "organizations": "Organizations",
   "other_costs": "Other costs",
+  "others_repliable": "Others repliable",
   "over_paid": "Over paid",
   "owner": "Owner",
   "package_duration": "Package duration",
+  "package_type": "Package type",
   "page": "Page",
   "page_content": "Page content",
   "page_name": "Page name",
@@ -420,14 +437,17 @@
   "phone_number": "Phone number",
   "pick": "Pick",
   "pick_a_class": "Pick a class",
-  "pick_a_day_in_a_week": "Pick a day in a week",
   "pick_a_day_in_a_month": "Pick a day in a month",
+  "pick_a_day_in_a_week": "Pick a day in a week",
   "pick_a_form": "Pick a form",
   "pick_a_learning_ticket": "Pick a learning ticket",
   "pick_a_method": "Pick a method",
   "pick_a_month": "Pick a month",
+  "pick_a_tag": "Pick a tag",
+  "pick_a_ticket": "Pick a ticket",
   "pick_a_year": "Pick a year",
   "pick_permissions": "Pick permissions",
+  "pinned": "Pinned",
   "point": "Point",
   "point_contest": "Point contest",
   "point_contest_list": "Point contests",
@@ -445,6 +465,7 @@
   "price_for_1_year": "1 year",
   "price_for_3_months": "3 months",
   "price_for_lifetime": "Price for lifetime",
+  "processed": "Processed",
   "product_course": "Product/Course",
   "product_group": "Product group",
   "product_list": "Product list",
@@ -452,6 +473,7 @@
   "product_type": "Product type",
   "products": "Products",
   "program_rule": "Program rule",
+  "proof_of_payment_image": "Proof of payment image",
   "proof_of_payment_verification_list": "Proofs of payment verification",
   "publication": "Publication",
   "publication_code": "Publication code",
@@ -460,10 +482,13 @@
   "publication_management": "Publication management",
   "publication_name": "Publication name",
   "publications": "Publications",
+  "publish_posts": "Publish posts",
   "qr_code": "QR Code",
   "quarterly_package": "Quarterly package",
   "quarterly_price": "Price per 3 months",
   "ranking": "Ranking",
+  "reacted_comment": "Reacted comment",
+  "receive_account_number": "Receive account number",
   "receiver": "Receiver",
   "record": "Record(s)",
   "recurring_withdrawal_period": "Recurring withdrawal period",
@@ -472,10 +497,15 @@
   "referral_bank": "Referral bank",
   "referral_bank_agent": "Referral bank agent",
   "referral_email": "Referral email",
+  "referral_membership_tier": "Refferal membership tier",
   "referral_phone": "Referral phone",
   "referrer": "Referrer",
   "referrer_phone": "Referrer phone",
+  "refferal_account_number": "Refferal account number",
   "refresh": "Refresh",
+  "refund_amount": "Refund amount",
+  "refund_request_image": "Refund proof",
+  "refund_request_type": "Refund request type",
   "refund_requests": "Refund requests",
   "refunded": "Refunded",
   "registered": "Registered",
@@ -513,16 +543,19 @@
   "remove_registration_form": "Remove registration form",
   "remove_testimonial": "Remove testimonial",
   "remove_website": "Remove website",
+  "reply_others": "Reply others",
   "report": "Report",
   "reports": "Reports",
   "request_demand": "Request demand",
   "request_type": "Request type",
   "requested_date": "Requested date",
   "required": "Required",
+  "resend": "Resend",
   "reset": "Reset",
   "resource": "Resource",
   "restore_ticket": "Restore ticket",
   "role": "Role",
+  "running": "Running",
   "running_platform": "Running platform",
   "sales": "Sales",
   "saturday": "Saturday",
@@ -532,6 +565,7 @@
   "select_learning_ticket": "Select learning ticket",
   "send": "Send",
   "sender": "Sender",
+  "sent": "Sent",
   "sent_count": "Sent count",
   "sent_date": "Sent date",
   "seo_description": "SEO Description",
@@ -556,16 +590,22 @@
   "staff_productivity": "Staff productivity",
   "staffs": "Staffs",
   "star_rating": "Star rating",
+  "stars_rating_course": "Stars rating course",
   "start_date": "Start date",
   "started_at": "Started at",
   "status": "Status",
+  "stopped": "Stopped",
   "student_appreciation_list": "Student appreciations",
   "student_appreciations": "Student appreciations",
   "studying": "Studying",
+  "studying_e_learners": "Studying e-learners",
+  "studying_learners": "Studying learners",
   "sunday": "Sunday",
+  "suspended": "Suspended",
   "tag": "Tag",
   "take_care": "Take care",
   "take_note": "Take note",
+  "take_note_here": "Take note here",
   "take_out_course": "Take out course",
   "taking_care": "Taking care",
   "taking_care_learners": "Taking care learners",
@@ -598,6 +638,7 @@
   "transfer_pending": "Transfer pending",
   "tuesday": "Tuesday",
   "tuition_request_management": "Tuition request management",
+  "tutiton_refunded": "Tutition refunded",
   "tutor": "Tutor",
   "tutor_course_reports": "Tutor course reports",
   "tutor_courses": "Tutor courses",
@@ -610,6 +651,7 @@
   "undiscount": "Undiscount",
   "unpaid": "Unpaid",
   "unregistered": "Unregistered",
+  "unsend": "Unsend",
   "unverified": "Unverified",
   "update_payment": "Update payment",
   "update_permission_of_organization": "Update permission of organization",
@@ -641,16 +683,17 @@
   "view_e_learning_subject_details": "View E-learning subject details",
   "view_e_learning_subjects": "View E-learning subjects",
   "view_e_learning_videos": "View E-learning videos",
+  "view_email_content": "View email content",
   "view_email_smtp_details": "View email SMTP details",
   "view_email_template_details": "View email template details",
   "view_email_templates": "View email templates",
   "view_event_details": "View event details",
   "view_events": "View events",
+  "view_image": "View image",
   "view_landing_page_details": "View landing page details",
   "view_landing_pages": "View landing pages",
   "view_learner_details": "View learner details",
   "view_learners": "View learners",
-  "view_studying_learners": "View learning learners",
   "view_membership_details": "View membership details",
   "view_memberships": "View memberships",
   "view_order_details": "View order details",
@@ -673,6 +716,7 @@
   "view_registration_forms": "View registration forms",
   "view_staff": "View staff",
   "view_staffs": "View staffs",
+  "view_studying_learners": "View learning learners",
   "view_testimonial_details": "View testimonial details",
   "view_testimonials": "View testimonials",
   "view_tuition_requests": "View tuition requests",
@@ -705,49 +749,5 @@
   "zalo_messages_sent": "Sent messages on Zalo",
   "zoom_id": "ID of Zoom room",
   "zoom_link": "Zoom Link",
-  "zoom_password": "Password of Zoom room",
-   "forum_name": "Forum name",
-   "publish_posts": "Publish posts",
-   "stars_rating_course": "Stars rating course",
-   "reply_others": "Reply others",
-   "others_repliable": "Others repliable",
-   "comment_reaction": "Comment reaction",
-   "reacted_comment": "Reacted comment",
-   "referral_membership_tier": "Refferal membership tier",
-   "caring_staff": "Caring staff",
-   "refferal_account_number": "Refferal account number",
-   "agency_code": "Agency code",
-  "by_learners": "By learners",
-  "package_type": "Package type",
-  "orders": "Orders",
-  "cancel_agency_permission": "Cancel agency permission",
-  "receive_account_number": "Receive account number",
-  "refund_request_type": "Refund request type",
-  "refund_amount": "Refund amount",
-  "refund_request_image": "Refund proof",
-  "click_here_to_paste_image": "Click here to paste image",
-  "learner_id_image": "Learner ID",
-  "processed": "Processed",
-  "view_image": "View image",
-  "proof_of_payment_image": "Proof of payment image",
-  "kpi_commissions": "KPI & Commissions",
-  "add_level": "Add level",
-  "intro_video_settings": "Introduction video settings",
-  "order": "order",
-  "community_name": "Community name",
-  "pinned": "Pinned",
-  "featured": "Featured",
-  "avatar_link": "Avatar link",
-  "tutiton_refunded": "Tutition refunded",
-  "pick_a_tag": "Pick a tag",
-  "take_note_here": "Take note here",
-  "note": "Note",
-  "job_title": "Job title",
-  "running": "Running",
-  "stopped": "Stopped",
-  "pick_a_ticket": "Pick a ticket",
-  "sent": "Sent",
-  "unsend": "Unsend",
-  "resend": "Resend",
-  "view_email_content": "View email content"
+  "zoom_password": "Password of Zoom room"
 }
