--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -8,12 +8,12 @@
   "activate_course": "Kích hoạt khoá học",
   "activate_e_learning_courses_for_learners": "Kích hoạt khoá học Elearning cho học viên",
   "activated": "Kích hoạt",
-  "suspended": "Tạm dừng",
   "activity": "Hoạt động",
   "activity_history": "Xem quá trình hoạt động",
   "add": "Thêm",
   "add_content": "Thêm nội dung",
   "add_course": "Thêm khoá học",
+  "add_level": "Thêm mức",
   "add_new": "Thêm mới",
   "add_new_account": "Thêm mới tài khoản",
   "add_new_check_in_lesson": "Tạo mới buổi điểm danh",
@@ -54,6 +54,7 @@
   "advance_limit": "Hạn mức ứng tiền",
   "advertisement_management": "Quản lý ads",
   "agencies": "Đại lý",
+  "agency_code": "Mã đại lý",
   "agency_list": "Danh sách đại lý",
   "agent": "Thuộc đại lý",
   "apply": "Áp dụng",
@@ -71,6 +72,7 @@
   "attendance_time": "Khung giờ học",
   "auto": "Tự động",
   "avatar": "Ảnh đại diện",
+  "avatar_link": "Đường dẫn ảnh avatar",
   "back": "Quay lại",
   "background": "Ảnh nền",
   "badge": "Huy hiệu",
@@ -78,8 +80,10 @@
   "bank_transfer": "Chuyển khoản",
   "banking_online": "Thanh toán ngân hàng",
   "banner": "Ảnh banner",
+  "banner_link": "Đường dẫn ảnh banner",
   "big_courses": "Khóa học lớn",
   "by_date": "Theo ngày",
+  "by_learners": "Theo học viên",
   "by_month": "Theo tháng",
   "by_quarter": "Theo quý",
   "by_referred_person": "Hoa hồng theo người được giới thiệu",
@@ -90,6 +94,7 @@
   "bystanding_learners": "Danh sách học viên chưa chia",
   "call_blocked_by_customer": "Khách hàng chặn cuộc gọi",
   "cancel": "Huỷ",
+  "cancel_agency_permission": "Hủy quyền đại lý",
   "cancel_learner_list_of_staff": "Huỷ danh sách học viên của nhân sự",
   "cancel_order": "Huỷ đơn hàng",
   "cannot_blank": "không được để trống",
@@ -99,6 +104,7 @@
   "caring_by": "Nhân viên chăm sóc",
   "caring_e_learners": "Danh sách học viên e-learning đang chăm",
   "caring_learners": "Danh sách học viên đang chăm sóc",
+  "caring_staff": "Nhân viên đang chăm",
   "category": "Danh mục",
   "category_icon": "Icon danh mục",
   "category_name": "Tên danh mục",
@@ -116,14 +122,17 @@
   "class_management": "Quản lý lớp",
   "class_name": "Tên lớp học",
   "classes": "Lớp học",
+  "click_here_to_paste_image": "CLick chuột vào đây để paste hình ảnh",
   "collected_information": "Các thông tin cần thu thập",
   "column_name": "Tên cột",
+  "comment_reaction": "Thả tim bình luận",
   "commission": "Hoa hồng",
   "commission_method": "Phương thức tính hoa hồng",
   "commission_policy": "Chính sách hoa hồng",
   "commission_rate": "Mức hoa hồng",
   "community_categories": "Danh sách danh mục cộng đồng",
   "community_category": "Danh mục cộng đồng",
+  "community_name": "Tên cộng đồng",
   "complete": "Hoàn thành",
   "confirm": "Xác nhận",
   "contact_request_list": "Danh sách yêu cầu liên hệ",
@@ -233,22 +242,21 @@
   "event_name": "Tên sự kiện",
   "example": "Ví dụ",
   "excess_refunded": "Hoàn tiền thừa",
-  "tutiton_refunded": "Hoàn học phí",
   "executing_staff": "Nhân viên thực thi",
   "export_learners_data": "Xuất dữ liệu học viên",
   "export_to_excel": "Xuất excel",
   "external": "Bên ngoài",
   "failed": "Thất bại",
+  "featured": "Nổi bật",
   "features": "Tính năng",
   "filter": "Lọc",
   "footer_settings": "Cấu hình chân trang",
   "form_name": "Tên form",
   "forum": "Diễn đàn",
-  "logo_link": "Đường dẫn ảnh logo",
-  "banner_link": "Đường dẫn ảnh banner",
   "forum_categories": "Danh sách danh mục diễn đàn",
   "forum_communities": "Danh sách cộng đồng",
   "forum_domain": "Tên miền trang diễn đàn",
+  "forum_name": "Tên diễn đàn",
   "forum_settings": "Cấu hình diễn đàn",
   "frame": "Khung",
   "free_course_reports": "Báo cáo khóa học miễn phí",
@@ -273,14 +281,17 @@
   "indirect_referral_commission": "oa hồng giới thiệu gián tiếp",
   "indirect_referral_points": "Điểm giới thiệu gián tiếp",
   "internal": "Trong hệ thống",
+  "intro_video_settings": "Cấu hình video giới thiệu",
   "introduction_video": "Video giờ thiệu",
   "introduction_video_link": "Link video giới thiệu",
   "introduction_videos": "Danh sách video giới thiệu",
   "invalid_format": "Không đúng định dạng",
   "is_popular": "Phổ biến",
+  "job_title": "Chức danh",
   "join_course": "Đăng ký khóa học",
   "joined_course": "Đã đăng ký",
   "keywords": "Từ khoá",
+  "kpi_commissions": "Mức doanh số và hoa hồng",
   "landing_page": "Landing page",
   "landing_page_code": "Mã landing page",
   "landing_page_content": "Trang landing page",
@@ -299,12 +310,10 @@
   "learner_count_75": "Số người học 75%",
   "learner_count_90": "Số người học 90%",
   "learner_details": "Chi tiết học viên",
+  "learner_id_image": "Ảnh CCCD học viên",
   "learner_management": "Quản lý học viên",
   "learner_name": "Tên học viên",
   "learners": "Học viên",
-  "learning": "Đang học",
-  "studying_e_learners": "Danh sách học viên e-learning đang học",
-  "studying_learners": "Danh sách học viên đang học",
   "learning_ticket": "Vé khoá học",
   "learning_ticket_list": "Danh sách vé khóa học",
   "learning_ticket_management": "Quản lý vé",
@@ -320,6 +329,7 @@
   "link_on_menu": "Đường dẫn trên thanh menu",
   "location": "Địa điểm",
   "log_out": "Đăng xuất",
+  "logo_link": "Đường dẫn ảnh logo",
   "logout": "Đăng xuất",
   "make_a_call": "Gọi điện",
   "manual": "Thủ công",
@@ -357,6 +367,7 @@
   "no_account": "Chưa có tài khoản",
   "no_demands": "Không có nhu cầu",
   "normal_page": "Trang bình thường",
+  "note": "Ghi chú",
   "note_content": "Nội dung ghi chú",
   "notification_email": "Email thông báo",
   "notification_email_list": "Danh sách email thông báo",
@@ -366,9 +377,11 @@
   "opening_class": "Lớp đang mở",
   "operation": "Vận hành",
   "optional_course_settings": "Thiết lập khoá học tuỳ chọn",
+  "order": "Thứ tự",
   "order_code": "Mã đơn hàng",
   "order_count": "Số giao dịch",
   "order_status": "Trạng thái đơn hàng",
+  "orders": "Đơn hàng",
   "organization": "Tổ chức",
   "organization_email": "Email tổ chức",
   "organization_list": "Danh sách tổ chức",
@@ -378,9 +391,11 @@
   "organization_representative": "Người đại diện tổ chức",
   "organizations": "Tổ chức",
   "other_costs": "Các chi phí khác",
+  "others_repliable": "Người khác trả lời",
   "over_paid": "Thanh toán thừa",
   "owner": "Chủ sở hữu",
   "package_duration": "Thời hạn gói",
+  "package_type": "Loại gói",
   "page": "Trang",
   "page_content": "Nội dung page",
   "page_name": "Tên trang",
@@ -422,14 +437,17 @@
   "phone_number": "Số điện thoại",
   "pick": "Chọn",
   "pick_a_class": "Chọn lớp để gắn",
-  "pick_a_day_in_a_week": "Chọn thứ trong tuần",
   "pick_a_day_in_a_month": "Chọn ngày trong tháng",
+  "pick_a_day_in_a_week": "Chọn thứ trong tuần",
   "pick_a_form": "Chọn form để sử dụng cho landing page",
   "pick_a_learning_ticket": "Chọn vé để gắn",
   "pick_a_method": "Chọn phương thức",
   "pick_a_month": "Chọn tháng",
+  "pick_a_tag": "Chọn thẻ tag",
+  "pick_a_ticket": "Chọn vé",
   "pick_a_year": "Chọn năm",
   "pick_permissions": "Danh sách quyền chọn",
+  "pinned": "Ghim",
   "point": "Thanh toán bằng điểm",
   "point_contest": "Cuộc thi tính điểm",
   "point_contest_list": "Danh sách cuộc thi tính điểm",
@@ -447,6 +465,7 @@
   "price_for_1_year": "1 năm",
   "price_for_3_months": "3 tháng",
   "price_for_lifetime": "Vĩnh viễn",
+  "processed": "Đã xử lý",
   "product_course": "Sản phẩm/Khoá học",
   "product_group": "Nhóm sản phẩm",
   "product_list": "Danh sách sản phẩm",
@@ -454,6 +473,7 @@
   "product_type": "Loại sản phẩm",
   "products": "Sản phẩm",
   "program_rule": "Thể lệ chương trình",
+  "proof_of_payment_image": "Ảnh uỷ nhiệm chi",
   "proof_of_payment_verification_list": "Danh sách xác thực thanh toán",
   "publication": "Ấn phẩm",
   "publication_code": "Mã ấn phẩm",
@@ -462,10 +482,13 @@
   "publication_management": "Quản lý ấn phẩm",
   "publication_name": "Tên ấn phẩm",
   "publications": "Ấn phẩm",
+  "publish_posts": "Đăng bài viết",
   "qr_code": "Mã QR",
   "quarterly_package": "Gói 3 tháng",
   "quarterly_price": "Giá 3 tháng",
   "ranking": "Xem bảng xếp hạng",
+  "reacted_comment": "Bình luận được thả tim",
+  "receive_account_number": "Tài khoản hoàn tiền",
   "receiver": "Người nhận",
   "record": "Bản ghi",
   "recurring_withdrawal_period": "Khoảng thời gian rút tiền định kỳ",
@@ -474,10 +497,15 @@
   "referral_bank": "Ngân hàng người giới thiệu",
   "referral_bank_agent": "Chi nhánh ngân hàng người giới thiệu",
   "referral_email": "Email người giới thiệu",
+  "referral_membership_tier": "Cấp bậc thành viên người giới thiệu",
   "referral_phone": "Số điện thoại người giới thiệu",
   "referrer": "Người giới thiệu",
   "referrer_phone": "SĐT Người giới thiệu",
+  "refferal_account_number": "Số tài khoản người giới thiệu",
   "refresh": "Làm mới",
+  "refund_amount": "Số tiền hoàn",
+  "refund_request_image": "Ảnh yêu cầu hoàn tiền",
+  "refund_request_type": "Loại yêu cầu hoàn tiền",
   "refund_requests": "Yêu cầu hoàn tiền",
   "refunded": "Hoàn tiền",
   "registered": "Đã đăng ký",
@@ -515,16 +543,19 @@
   "remove_registration_form": "Xoá form đăng ký",
   "remove_testimonial": "Xoá lời chứng thực",
   "remove_website": "Xoá website",
+  "reply_others": "Trả lời người khác",
   "report": "Báo cáo",
   "reports": "Báo cáo",
   "request_demand": "Nội dung yêu cầu",
   "request_type": "Loại yêu cầu",
   "requested_date": "Ngày yêu cầu",
   "required": "Bắt buộc",
+  "resend": "Gửi lại",
   "reset": "Cài lại",
   "resource": "Tài nguyên",
   "restore_ticket": "Khôi phục",
   "role": "Vai trò",
+  "running": "Đang hoạt động",
   "running_platform": "Nền tảng chạy",
   "sales": "Nhân viên sales",
   "saturday": "Thứ 7",
@@ -534,6 +565,7 @@
   "select_learning_ticket": "Chọn vé",
   "send": "Gửi",
   "sender": "Người gửi",
+  "sent": "Đã gửi",
   "sent_count": "Số lần gửi",
   "sent_date": "Ngày gửi",
   "seo_description": "Mô tả SEO",
@@ -558,16 +590,22 @@
   "staff_productivity": "Hiệu quả nhân sự",
   "staffs": "Danh sách nhân viên",
   "star_rating": "Đánh giá",
+  "stars_rating_course": "Đánh giá sao khoá học",
   "start_date": "Ngày bắt đầu",
   "started_at": "Thời gian tổ chức",
   "status": "Trạng thái",
+  "stopped": "Không hoạt động",
   "student_appreciation_list": "Tri ân học viên",
   "student_appreciations": "Tri ân học viên",
   "studying": "Đang học",
+  "studying_e_learners": "Danh sách học viên e-learning đang học",
+  "studying_learners": "Danh sách học viên đang học",
   "sunday": "Chủ nhật",
+  "suspended": "Tạm dừng",
   "tag": "Thẻ tag",
   "take_care": "Nhận chăm sóc",
   "take_note": "Ghi chú",
+  "take_note_here": "Viết ghi chú ở đây",
   "take_out_course": "Lấy ra khoá học",
   "taking_care": "Đang chăm",
   "taking_care_learners": "Nhận chăm sóc học viên",
@@ -600,6 +638,7 @@
   "transfer_pending": "Hẹn chuyển khoản",
   "tuesday": "Thứ 3",
   "tuition_request_management": "Quản lý yêu cầu học phí",
+  "tutiton_refunded": "Hoàn học phí",
   "tutor": "Giáo viên",
   "tutor_course_reports": "Báo cáo khóa học giảng viên",
   "tutor_courses": "Khóa học giảng viên",
@@ -612,6 +651,7 @@
   "undiscount": "Không chiết khấu",
   "unpaid": "Chưa thanh toán",
   "unregistered": "Chưa có tài khoản",
+  "unsend": "Chưa gửi",
   "unverified": "Chưa xác thực",
   "update_payment": "Cập nhật thanh toán",
   "update_permission_of_organization": "Cập nhật quyền tổ chức",
@@ -643,16 +683,17 @@
   "view_e_learning_subject_details": "Chi tiết học phần E-learning",
   "view_e_learning_subjects": "Danh sách học phần E-learning",
   "view_e_learning_videos": "Danh sách video E-learning",
+  "view_email_content": "Xem nội dung email",
   "view_email_smtp_details": "Xem chi tiết Email SMTP",
   "view_email_template_details": "Chi tiết email template",
   "view_email_templates": "Xem danh sách email template",
   "view_event_details": "Xem chi tiết sự kiện",
   "view_events": "Xem danh sách sụ kiện",
+  "view_image": "Xem ảnh",
   "view_landing_page_details": "Chi tiết landingpage",
   "view_landing_pages": "Xem danh sách landingpage",
   "view_learner_details": "Thông tin chi tiết học viên",
   "view_learners": "Xem danh sách học viên",
-  "view_studying_learners": "Xem danh sách học viên đang học",
   "view_membership_details": "Chi tiết danh sách thành viên",
   "view_memberships": "Danh sách sách thành viên",
   "view_order_details": "Xem chi tiết đơn hàng",
@@ -675,6 +716,7 @@
   "view_registration_forms": "Xem danh sách form đăng ký",
   "view_staff": "Xem chi tiết nhân sự",
   "view_staffs": "Xem danh sách nhân sự",
+  "view_studying_learners": "Xem danh sách học viên đang học",
   "view_testimonial_details": "Xem chi tiết lời chứng thực",
   "view_testimonials": "Xem danh sách lời chứng thực",
   "view_tuition_requests": "Xem danh sách yêu cầu học phí",
@@ -707,48 +749,5 @@
   "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
   "zoom_id": "ID phòng Zoom",
   "zoom_link": "Link Zoom",
-  "zoom_password": "Mật khẩu phòng Zoom",
-  "forum_name": "Tên diễn đàn",
-  "publish_posts": "Đăng bài viết",
-  "stars_rating_course": "Đánh giá sao khoá học",
-  "reply_others": "Trả lời người khác",
-  "others_repliable": "Người khác trả lời",
-  "comment_reaction": "Thả tim bình luận",
-  "reacted_comment": "Bình luận được thả tim",
-  "referral_membership_tier": "Cấp bậc thành viên người giới thiệu",
-  "caring_staff": "Nhân viên đang chăm",
-  "refferal_account_number": "Số tài khoản người giới thiệu",
-  "agency_code": "Mã đại lý",
-  "by_learners": "Theo học viên",
-  "package_type": "Loại gói",
-  "orders": "Đơn hàng",
-  "cancel_agency_permission": "Hủy quyền đại lý",
-  "receive_account_number": "Tài khoản hoàn tiền",
-  "refund_request_type": "Loại yêu cầu hoàn tiền",
-  "refund_amount": "Số tiền hoàn",
-  "refund_request_image": "Ảnh yêu cầu hoàn tiền",
-  "click_here_to_paste_image": "CLick chuột vào đây để paste hình ảnh",
-  "learner_id_image": "Ảnh CCCD học viên",
-  "processed": "Đã xử lý",
-  "view_image": "Xem ảnh",
-  "proof_of_payment_image": "Ảnh uỷ nhiệm chi",
-  "kpi_commissions": "Mức doanh số và hoa hồng",
-  "add_level": "Thêm mức",
-  "intro_video_settings": "Cấu hình video giới thiệu",
-  "order": "Thứ tự",
-  "community_name": "Tên cộng đồng",
-  "pinned": "Ghim",
-  "featured": "Nổi bật",
-  "avatar_link": "Đường dẫn ảnh avatar",
-  "pick_a_tag": "Chọn thẻ tag",
-  "take_note_here": "Viết ghi chú ở đây",
-  "note": "Ghi chú",
-  "job_title": "Chức danh",
-  "running": "Đang hoạt động",
-  "stopped": "Không hoạt động",
-  "pick_a_ticket": "Chọn vé",
-  "sent": "Đã gửi",
-  "unsend": "Chưa gửi",
-  "resend": "Gửi lại",
-  "view_email_content": "Xem nội dung email"
+  "zoom_password": "Mật khẩu phòng Zoom"
 }
