fix: change model price

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -722,5 +722,6 @@
   "configure_benefit_package": "Cấu hình nhóm quyền lợi",
   "benefit_package_name": "Tên nhóm quyền lợi",
   "price_six_months": "Giá 6 tháng",
-  "price_one_year": "Giá 1 năm"
+  "price_one_year": "Giá 1 năm",
+  "business_empower": "Trao quyền kinh doanh"
 }
