--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -721,5 +721,6 @@
   "configure_benefit_package": "Configure benefit package",
   "benefit_package_name": "Benefit package name",
   "price_six_months": "Price 6 months",
-  "price_one_year": "Price for 1 year"
+  "price_one_year": "Price for 1 year",
+  "business_empower": "Empowering Business"
 }
