fix price list and payment student

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -769,5 +769,6 @@
   "benefit_package_name": "Benefit package name",
   "price_six_months": "Price 6 months",
   "price_one_year": "Price for 1 year",
-  "business_empower": "Empowering Business"
+  "business_empower": "Empowering Business",
+  "payment_updates": "Payment updates"
 }
