--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -770,5 +770,6 @@
   "benefit_package_name": "Tên nhóm quyền lợi",
   "price_six_months": "Giá 6 tháng",
   "price_one_year": "Giá 1 năm",
-  "business_empower": "Trao quyền kinh doanh"
+  "business_empower": "Trao quyền kinh doanh",
+  "payment_updates": "Cập nhật thanh toán"
 }
