update tooltip guide for "Thiết lập tổ chức", "Thiết lập cấu hình rút tiền", "Thiết lập phương thức thanh toán", "Thiết lập nhóm quyền", "Thiết lập website", "Thiết lập trang (website)", "Cấu hình thanh menu"

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -749,5 +749,33 @@
   "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
   "zoom_id": "ID phòng Zoom",
   "zoom_link": "Link Zoom",
-  "zoom_password": "Mật khẩu phòng Zoom"
+  "zoom_password": "Mật khẩu phòng Zoom",
+  "guide_organization_name": "Tên tổ chức là thông tin sẽ hiện lên ở email, trang e-learning và các trang thông tin khác. Bạn có thể tùy chỉnh nó bất kỳ lúc nào.",
+  "guide_organization_email": "Đây là thông tin email của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
+  "guide_organization_phone": "Đây là thông tin số điện thoại của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
+  "guide_organization_admin": "Đây là tài khoản Admin của hệ thống",
+  "guide_organization_address": "Nhập địa chỉ trụ sở hoặc văn phòng tổ chức của bạn. Thông tin này sẽ hiện ra ở trang liên hệ của tổ chức.",
+  "guide_organization_embed_map": "Nếu tổ chức của bạn đã cung cấp thông tin và địa điểm trên bản đồ google map, bạn hãy copy và dán mã nhúng vào đây. Thông tin về địa điểm tổ chức của bạn sẽ hiện ra ở trang liên hệ của tổ chức.",
+  "guide_organization_logo": "Các phần logo này sẽ hiển thị ở thanh chức năng bên trái của website quản trị và các trang nội dung khác.",
+  "guide_organization_status": "Hãy luôn đảm bảo trạng thái của tổ chức đang được hoạt động.",
+  "guide_organization_withdrawal_limit": "Đây là hạn mức tối thiểu số tiền mà thành viên có thể rút về. Lưu ý: số tiền phải lớn hơn 0.",
+  "guide_group_permission_pick": "Việc nhóm nhiều quyền nhỏ lại thành một nhóm quyền mang ý nghĩa giống như bạn tạo ra một chức vụ và trao cho họ một số các quyền hạn nhất định trong tổ chức của bạn.",
+  "guide_group_permission_add_new": "Hãy ấn vào nút Thêm mới này để chuyển đến trang Thêm mới nhóm quyền.",
+  "guide_group_permission_name": "Hãy đặt tên theo chức vụ, ví dụ trưởng phòng nhân sự, trưởng phòng sale, nhân viên sale...",
+  "guide_group_permission_activate": "Hãy luôn đảm bảo nhóm quyền của tổ chức ở trạng thái kích hoạt. Bạn cũng có thể vô hiệu nhóm quyền khi muốn hạn chế quyền hạn của nhân sự.",
+  "guide_website_name": "Hãy nhập tên website một cách ngắn gọn, dễ nhớ. Thường sẽ là tên tổ chức của bạn.",
+  "guide_website_copyright": "Nội dung này sẽ hiện ra ở cuối trang chủ, thường sẽ là một dòng ngắn. Ví dụ: COPYRIGHT © (tên tổ chức) ALL RIGHTS RESERVED",
+  "guide_website_logo_header": "Tải lên hình ảnh logo tổ chức của bạn. Hình ảnh này sẽ hiện lên ở đầu trang",
+  "guide_website_logo_footer": "Tải lên hình ảnh logo tổ chức của bạn ở dạng âm bản, thường là mầu trắng. Hình ảnh này sẽ hiện lên ở cuối trang.",
+  "guide_website_background_header": "Màu sắc của thanh menu, nên tương phản với màu của logo, thường sẽ là màu trắng.",
+  "guide_website_background_footer": "Màu sắc của chân trang, nên tương phản với màu của logo, thường sẽ là màu tối.",
+  "guide_website_social_links": "Link trang mạng xã hội của tổ chức. Những đường link này cần bao gồm cả https://www........",
+  "guide_website_description": "Nội dung này sẽ hiện ra ở cuối trang, ngay dưới logo footer. Thông thường sẽ là thông tin giới thiệu ngắn về tổ chức của bạn.",
+  "guide_page_name": "Tên của trang con trong website của bạn",
+  "guide_page_description": "Mô tả ngắn về nội dung của trang này.",
+  "guide_page_content": "Đây là nội dung chính của trang. Bạn nên thuê người code web html hoặc liên hệ với đội ngũ hỗ trợ dịch vụ của chúng tôi. Hotline: 0969218765",
+  "guide_header_menu_name": "Đây là tên nút bấm sẽ hiện ra ở thanh menu đầu trang như trang chủ, giới thiệu, khóa học...",
+  "guide_header_menu_position": "Thứ tự hiển thị trên thanh menu. Tính từ trái qua phải",
+  "guide_header_menu_status": "Nếu bật, nút bấm sẽ hiện lên ở thanh menu. Nếu tắt, nút bấm này sẽ ẩn đi.",
+  "guide_header_menu_parent_link": "Nếu muốn nút bấm này là thư mục con (category) nằm trong 1 nút bấm khác (navigation) thì hãy chọn phần này, nếu không thì để trống."
 }
