--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -749,5 +749,33 @@
   "zalo_messages_sent": "Sent messages on Zalo",
   "zoom_id": "ID of Zoom room",
   "zoom_link": "Zoom Link",
-  "zoom_password": "Password of Zoom room"
+  "zoom_password": "Password of Zoom room",
+  "guide_organization_name": "The organization name will be displayed in emails, on the e-learning platform, and other information pages. You can customize it at any time.",
+  "guide_organization_email": "This is the email information for the organization so that customers can contact you. This information will appear in the menu and the contact section outside the homepage.",
+  "guide_organization_phone": "This is the phone number for the organization to allow customers to reach you. This information will appear in the menu and the contact section outside the homepage.",
+  "guide_organization_admin": "This is the Admin account of the system.",
+  "guide_organization_address": "Enter the address of your organization's headquarters or office. This information will appear on the organization's contact page.",
+  "guide_organization_embed_map": "If your organization has provided information and location on Google Maps, you can copy and paste the embed code here. Information about your organization's location will appear on the contact page.",
+  "guide_organization_logo": "These logo elements will be displayed in the function panel on the left of the admin website and other content pages.",
+  "guide_organization_status": "Always ensure that your organization's status is active.",
+  "guide_organization_withdrawal_limit": "This is the minimum withdrawal limit that members can request. Note: the amount must be greater than 0.",
+  "guide_group_permission_pick": "Grouping multiple small permissions into one permission group means that you create a role and assign them certain rights within your organization.",
+  "guide_group_permission_add_new": "Click this Add New button to go to the Add New Permission Group page.",
+  "guide_group_permission_name": "Name it according to the role, for example, head of HR, head of sales, sales staff...",
+  "guide_group_permission_activate": "Always ensure that the permission group is active. You can also deactivate the group if you want to limit the authority of personnel.",
+  "guide_website_name": "Enter the website name in a concise, memorable way. It is usually the name of your organization.",
+  "guide_website_copyright": "This content will appear at the bottom of the homepage, usually a short line. For example: COPYRIGHT © (organization name) ALL RIGHTS RESERVED.",
+  "guide_website_logo_header": "Upload an image of your organization's logo. This image will appear at the top of the page.",
+  "guide_website_logo_footer": "Upload an image of your organization's logo in negative form, usually in white. This image will appear at the bottom of the page.",
+  "guide_website_background_header": "The color of the menu bar should contrast with the logo color, usually white.",
+  "guide_website_background_footer": "The color of the footer should contrast with the logo color, usually a dark color.",
+  "guide_website_social_links": "Links to the organization's social media pages. These links must include https://www........",
+  "guide_website_description": "This content will appear at the bottom of the page, just under the footer logo. It is usually a brief introduction to your organization.",
+  "guide_page_name": "The name of the subpage in your website.",
+  "guide_page_description": "A brief description of the content of this page.",
+  "guide_page_content": "This is the main content of the page. You should hire someone to code the HTML website or contact our service support team. Hotline: 0969218765.",
+  "guide_header_menu_name": "This is the name of the button that will appear in the top menu, such as home, introduction, courses...",
+  "guide_header_menu_position": "The display order on the menu, counting from left to right.",
+  "guide_header_menu_status": "If enabled, the button will appear in the menu. If disabled, this button will be hidden.",
+  "guide_header_menu_parent_link": "If you want this button to be a subcategory (category) under another button (navigation), select this option; if not, leave it blank."
 }
